fix alignement of preset buttons + focus styling when clicked

--- a/src/renderer/assets/styles/components/settings.scss
+++ b/src/renderer/assets/styles/components/settings.scss
@@ -877,6 +877,27 @@ div[data-radix-popper-content-wrapper] {
     }
 }
 
+.preset_settings_container {
+    > div {
+        button {
+            margin-bottom: 10px;
+        }
+
+        &:nth-child(-n + 2) {
+            margin-bottom: 20px;
+        }
+
+        &:last-child {
+            position: absolute;
+            bottom: 0;
+
+            @media screen and (height <= 600px) {
+                position: relative;
+            }
+        }
+    }
+}
+
 .CSS_END_components_settings {
     display: none;
 }
